# cybershield

./: README.md  app.py  environment.py  inference.py  models.py  openenv.yaml  pyproject.toml  requirements.txt  server.py  synthetic_logs.py
cybershield-dashboard/frontend/: package.json
cybershield-dashboard/frontend/src/: utils.js
cybershield-dashboard/frontend/src/api/: api.js
cybershield-dashboard/frontend/src/components/: AlertsOverlay.jsx  AttackChart.jsx  AttackTimelineChart.jsx  BlockedIPs.jsx  GlobalAttackMap.jsx  MetricsGrid.jsx  ThreatIntelPanel.jsx
cybershield-dashboard/frontend/src/pages/: Dashboard.jsx
cybershield-dashboard/frontend/src/styles/: globals.css
legacy/: ai_automation.py  inference.py  reward_utils.py  task_utils.py  validator.py  vulnerability_manager.py
legacy/cybershield-dashboard/: README.md
legacy/cybershield-dashboard/frontend/: index.html  package-lock.json
legacy/cybershield-dashboard/frontend/src/: utils.js
legacy/cybershield-dashboard/frontend/src/api/: api.js
legacy/cybershield-dashboard/frontend/src/components/: AIDefensePanel.jsx  ActionPanel.jsx  AlertsOverlay.jsx  AttackChart.jsx  AttackLogs.jsx  AttackTimelineChart.jsx  GlobalAttackMap.jsx  Header.jsx  HealthPanel.jsx  LiveEventFeed.jsx  SettingsPanel.jsx
legacy/cybershield-dashboard/frontend/src/pages/: Dashboard.jsx
legacy/reports/: latest_report.json  latest_report.md
legacy/tasks/: easy_task.py  hard_task.py  medium_task.py
legacy/tests/: test_automation.py
reports/: latest_report.json  latest_report.md
server/: app.py
tasks/: easy_task.py
