[project]
name = "cybershield-openenv"
version = "0.1.0"
description = "CyberShield OpenEnv RL environment for cybersecurity defense simulation"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "openenv-core>=0.2.0",
  "fastapi",
  "uvicorn",
  "pydantic",
  "requests",
  "numpy",
  "PyYAML",
  "openai",
]

[project.scripts]
server = "app:main"
